--- a/styles.css
+++ b/styles.css
@@ -161,3 +161,18 @@ input[type=range]:focus::-ms-fill-lower {
 input[type=range]:focus::-ms-fill-upper {
   background: hsla(190, 70%, 35%, 1);
 }
+#foter{
+  background-color:#222;
+  position:absolute;
+  bottom: 0px;
+  width:100%;
+  height: 21px;
+  padding:5px;
+}
+a{
+  color:silver;
+  text-decoration: none;
+}
+a:hover{
+  color:white;
+}
